# test_alg

./: CMakeLists.txt  hexeditor.cpp  hexeditor.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  reswidget.cpp  reswidget.h  reswidget.ui  startwidget.cpp  startwidget.h  startwidget.ui
test_prog/: CMakeCache.txt  CMakeLists.txt  Makefile  asd.cpp  cholesky.cpp  cmake_install.cmake  par.cpp  par_1.cpp  test  test.cpp  zxc.h
